load('//:fdb.bzl', 'fdb_utility_library')

sh_binary(
    name = "hgVersion",
    srcs = ["hgVersion.sh"],
)

genrule(
    name = "version",
    srcs = [],
    outs = ["hgVersion.h"],
    cmd = "$(location :hgVersion) > $@",
    tools = [":hgVersion"],
    stamp = True,
)

fdb_utility_library(
    name = "libflow",
    hdrs = [
        "IRandom.h",
        "flow.h",

        # In hdrs so that it can be included in other files.
        "libs/system/src/error_code.cpp",
    ],
    srcs = [
        "ActorCollection.h",
        "actorcompiler.h",
        "Arena.h",
        "AsioReactor.h",
        "CompressedInt.h",
        "Deque.h",
        "DeterministicRandom.h",
        "error_definitions.h",
        "Error.h",
        "EventTypes.actor.h",
        "FastAlloc.h",
        "FastRef.h",
        "FaultInjection.h",
        "FileTraceLogWriter.h",
        "genericactors.actor.h",
        "Hash3.h",
        "hgVersion.h",
        "IDispatched.h",
        "IndexedSet.actor.h",
        "IndexedSet.h",
        "IThreadPool.h",
        "Knobs.h",
        "libs/system/src/local_free_on_destruction.hpp",
        "MetricSample.h",
        "Net2Packet.h",
        "network.h",
        "Platform.h",
        "Profiler.h",
        "serialize.h",
        "SignalSafeUnwind.h",
        "SimpleOpt.h",
        "stacktrace.h",
        "Stats.h",
        "SystemMonitor.h",
        "TDMetric.actor.h",
        "ThreadHelper.actor.h",
        "ThreadPrimitives.h",
        "ThreadSafeQueue.h",
        "Trace.h",
        "unactorcompiler.h",
        "UnitTest.h",
        "Util.h",
        "XmlTraceLogFormatter.h",

        "ActorCollection.actor.cpp",
        "boost.cpp",
        "CompressedInt.actor.cpp",
        "Deque.cpp",
        "Error.cpp",
        "FastAlloc.cpp",
        "FaultInjection.cpp",
        "FileTraceLogWriter.cpp",
        "flow.cpp",
        "genericactors.actor.cpp",
        "Hash3.c",
        "IndexedSet.cpp",
        "IThreadPool.cpp",
        "Knobs.cpp",
        "Net2.actor.cpp",
        "Net2Packet.cpp",
        "network.cpp",
        "Platform.cpp",
        "Profiler.actor.cpp",
        "SignalSafeUnwind.cpp",
        "stacktrace.amalgamation.cpp",
        "stacktrace_internal/stacktrace_aarch64-inl.inc",
        "stacktrace_internal/stacktrace_arm-inl.inc",
        "stacktrace_internal/stacktrace_generic-inl.inc",
        "stacktrace_internal/stacktrace_powerpc-inl.inc",
        "stacktrace_internal/stacktrace_unimplemented-inl.inc",
        "stacktrace_internal/stacktrace_win32-inl.inc",
        "stacktrace_internal/stacktrace_x86-inl.inc",
        "Stats.actor.cpp",
        "SystemMonitor.cpp",
        "TDMetric.cpp",
        "ThreadHelper.cpp",
        "ThreadPrimitives.cpp",
        "Trace.cpp",
        "UnitTest.cpp",
        "version.cpp",
        "XmlTraceLogFormatter.cpp",
    ],
    linkopts = [
        "-pthread",
        "-ldl",
        "-lrt",
    ],
)
